# telegram_test_bot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md
app/: CMakeLists.txt
app/src/: main.cpp  main.h
